Sidebar alignment fixes
move #table-indentfieldbox for better alignment

--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -146,6 +146,11 @@
 	top: 12px;
 }
 
+#table-indentfieldbox {
+	position: relative;
+	left: -20px;
+}
+
 #table-box4.sidebar.jsdialog.vertical {
 	width: auto;
 }
